rbd-mirror: ensure missing images are re-synced when detected

Fixes: http://tracker.ceph.com/issues/19811
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 74bd4f230a0cb7b709f2cb5c6db3dc79f0d8dede)

Conflicts:
	src/test/rbd_mirror/image_replayer/test_mock_BootstrapRequest.cc: trivial resolution
	src/tools/rbd_mirror/image_replayer/BootstrapRequest.h: trivial resolution